--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,47 @@
-            body{
-                width: 900px;
-                background-color:lightblue;
-                background-position: center;
-                margin: 0 auto; /* aligns section in middle */
-            }
-            h3{
-                left: 500px;
-                color:white;
-                background-color:black;
-                border:3px solid black;
-                position: absolute;
-            }
-            .container{
-                font: italic bold 20px/30px Georgia, serif;
-                text-align: center;
-                position: absolute;
-                margin: 0 auto;
-            }
-            .bottomRight{
-                position: absolute;
-                bottom:8px;
-                right: 16px;
-                font-size: 25px;
-                border: 3px solid #f44242;
-            }
+body{
+    background-color: #EEE;
+    font-family:Helvetica;
+}
+
+#container {
+    width:900px;
+    margin:0 auto;
+}
+
+#heading{
+    background-color:gray;
+}       
+
+h1 {
+    color: white;
+    text-align:center;
+    padding:10px;
+}
+
+h2 {
+    text-align:center;
+}
+
+a {
+    background-color:gray;
+    padding:10px;
+    border-radius:5px;
+    text-decoration:none;
+    color:white;
+}
+
+#main{
+    width:800px;
+    margin:0 auto;
+}
+
+td {
+    border: solid 2px gray;
+    padding:10px;
+}
+footer {
+    font-size:15px;
+    text-align:center;
+    color:gray;
+    height:20px;
+}
